[gd_scene load_steps=6 format=3 uid="uid://c4yhjj6tnm7f3"]

[ext_resource type="PackedScene" uid="uid://c30rssbwpe74k" path="res://Scenes/Store.tscn" id="1_8g53j"]
[ext_resource type="Script" path="res://Scenes/HUD.gd" id="1_l2ovv"]
[ext_resource type="FontFile" uid="uid://0q3aq0atrryd" path="res://Assets/Fonts/Merienda-Regular.ttf" id="2_83p4q"]
[ext_resource type="PackedScene" uid="uid://osgo2nocvk4j" path="res://Scenes/ToolTip.tscn" id="3_m8k2m"]
[ext_resource type="Texture2D" uid="uid://c2jg18w1kts3m" path="res://Assets/Misc/heart.png" id="4_1iopk"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_l2ovv")

[node name="Store" parent="." instance=ExtResource("1_8g53j")]

[node name="Cash" type="RichTextLabel" parent="Store"]
layout_mode = 0
offset_left = 176.0
offset_top = 1.0
offset_right = 404.0
offset_bottom = 117.0
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(0.560784, 0.337255, 0.231373, 1)
theme_override_fonts/normal_font = ExtResource("2_83p4q")
theme_override_font_sizes/normal_font_size = 72
text = "$100"

[node name="Loja" type="RichTextLabel" parent="Store"]
layout_mode = 0
offset_left = 14.0
offset_right = 242.0
offset_bottom = 116.0
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(0.560784, 0.337255, 0.231373, 1)
theme_override_fonts/normal_font = ExtResource("2_83p4q")
theme_override_font_sizes/normal_font_size = 72
text = "Loja"

[node name="HP" type="RichTextLabel" parent="."]
offset_left = 628.554
offset_top = 8.0
offset_right = 856.553
offset_bottom = 124.0
scale = Vector2(0.5, 0.5)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/normal_font = ExtResource("2_83p4q")
theme_override_font_sizes/normal_font_size = 72
text = "25"

[node name="ToolTip" parent="." instance=ExtResource("3_m8k2m")]

[node name="Heart" type="Sprite2D" parent="."]
position = Vector2(604.554, 35)
scale = Vector2(0.00438838, 0.00438837)
texture = ExtResource("4_1iopk")

[node name="ControlButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="Button" parent="ControlButtons"]
layout_mode = 0
offset_left = 1012.0
offset_top = 499.0
offset_right = 1140.0
offset_bottom = 563.0
text = "Play"

[node name="ResetButton" type="Button" parent="ControlButtons"]
layout_mode = 0
offset_left = 1160.0
offset_top = 499.0
offset_right = 1275.0
offset_bottom = 563.0
text = "Reset"

[connection signal="reset" from="." to="Store" method="_on_hud_reset"]
[connection signal="pressed" from="ControlButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ControlButtons/ResetButton" to="." method="_on_reset_button_pressed"]
